<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_menu_panel"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">

    <ImageView
        android:id="@+id/refresh_music_list"
        style="@style/little_ripple_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/mix_list_of_tracks"
        android:src="@drawable/refresh" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/current_track_view"
            style="@style/little_ripple_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/current_track"
            android:src="@drawable/note" />

        <ImageView
            android:id="@+id/music_list_view"
            style="@style/little_ripple_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/list_of_tracks"
            android:src="@drawable/play_list" />
    </LinearLayout>

    <ImageView
        android:id="@+id/repeat_track"
        style="@style/little_ripple_image"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/repeat_current_track"
        android:src="@drawable/repeat" />

</RelativeLayout>